--- a/Antidote/Antidote.entitlements
+++ b/Antidote/Antidote.entitlements
@@ -4,7 +4,7 @@
 <dict>
 	<key>keychain-access-groups</key>
 	<array>
-		<string>$(AppIdentifierPrefix)me.dvor.Antidote</string>
+		<string>$(AppIdentifierPrefix)org.zoxcore.Antidote</string>
 	</array>
 </dict>
 </plist>
