--- a/.travis.yml
+++ b/.travis.yml
@@ -2,12 +2,8 @@ language: objective-c
 osx_image: xcode9.3
 
 install:
-  - bundle install
-  - pod repo update > /dev/null
-  - ./install.sh
+  - echo dummy
+#  - bundle install
+#  - pod repo update > /dev/null
+#  - ./install.sh
 
-script:
-  - bundle exec fastlane test
-
-after_success:
-  - bash <(curl -s https://codecov.io/bash) -J 'Antidote'
