--- a/.github/workflows/nightly.yml
+++ b/.github/workflows/nightly.yml
@@ -6,6 +6,11 @@ on:
 #     - 'README.md'
   schedule:
     - cron:  '0 0 * * *'
+  workflow_dispatch:
+    inputs:
+      version:
+        description: dummy
+        default: dummy
 
 defaults:
   run:
