--- a/Antidote/Antidote-Info.plist
+++ b/Antidote/Antidote-Info.plist
@@ -30,13 +30,21 @@
 	<key>CFBundlePackageType</key>
 	<string>APPL</string>
 	<key>CFBundleShortVersionString</key>
-	<string>1.4.0</string>
+	<string>$(MARKETING_VERSION)</string>
 	<key>CFBundleSignature</key>
 	<string>????</string>
 	<key>CFBundleVersion</key>
-	<string>30</string>
+	<string>$(CURRENT_PROJECT_VERSION)</string>
+	<key>ITSAppUsesNonExemptEncryption</key>
+	<false/>
 	<key>LSRequiresIPhoneOS</key>
 	<true/>
+	<key>NSCameraUsageDescription</key>
+	<string>You can use video calls, send photos and videos, scan QR codes.</string>
+	<key>NSMicrophoneUsageDescription</key>
+	<string>You can use audio and video calls.</string>
+	<key>NSPhotoLibraryUsageDescription</key>
+	<string>You can send photos and videos.</string>
 	<key>UIBackgroundModes</key>
 	<array>
 		<string>audio</string>
@@ -60,15 +68,5 @@
 		<string>UIInterfaceOrientationLandscapeRight</string>
 		<string>UIInterfaceOrientationPortraitUpsideDown</string>
 	</array>
-	<key>ITSAppUsesNonExemptEncryption</key>
-	<true/>
-	<key>ITSEncryptionExportComplianceCode</key>
-	<string>700c0aa9-02e3-41f8-93bb-342c874d8fe3</string>
-	<key>NSCameraUsageDescription</key>
-	<string>You can use video calls, send photos and videos, scan QR codes.</string>
-	<key>NSMicrophoneUsageDescription</key>
-	<string>You can use audio and video calls.</string>
-	<key>NSPhotoLibraryUsageDescription</key>
-	<string>You can send photos and videos.</string>
 </dict>
 </plist>
