--- a/.github/workflows/nightly.yml
+++ b/.github/workflows/nightly.yml
@@ -46,7 +46,7 @@ jobs:
     - name: xcode compile
       run:  |
             echo "iPhone 11 Simulator"
-            env NSUnbufferedIO=YES xcodebuild -workspace ./Antidote.xcworkspace -scheme Antidote -destination 'platform=iOS Simulator,id=id:FC41B203-8F38-458B-9F64-23ADB1A969B4'
+            env NSUnbufferedIO=YES xcodebuild -workspace ./Antidote.xcworkspace -scheme Antidote -destination 'platform=iOS Simulator,id=FC41B203-8F38-458B-9F64-23ADB1A969B4'
 
     - name: check compile output
       run:  |
