typing notifications, faux offline messages, push url (#23)
* Refactoring part of ChatPrivateController to ChatInputViewManager,
sending typing notification to friend. Closes #61

* ChatListTableManager: showing typing status in chat list.

* Updating objcTox

* Partly done

* show pushtoken on friendprofile

* fix compile errors

* update objcTox

* use correct commit for objcTox

* replace UTF-8 bullet char with code point

* validate push urls

Co-authored-by: Dmytro Vorobiov <d@dvor.me>

--- a/Antidote/default-theme.yaml
+++ b/Antidote/default-theme.yaml
@@ -54,6 +54,7 @@ values:
   chat-input-background: lightgrayblue
   chat-incoming-bubble: lightgrayblue
   chat-outgoing-bubble: purple
+  chat-information-text: darkgray2
   tab-badge-background: palered
   tab-badge-text: white
   tab-item-active: simpleblue
