make arrow in chatlist red when there are unread messages

--- a/Antidote/default-theme.yaml
+++ b/Antidote/default-theme.yaml
@@ -81,3 +81,4 @@ values:
   file-image-cancel-button-tint: black
   lock-gradient-top: mediumblue
   lock-gradient-bottom: purple
+  chat-list-cell-arrow-unread-background: red
