--- a/.github/FUNDING.yml
+++ b/.github/FUNDING.yml
@@ -1,1 +1,1 @@
-custom: ["https://blockstream.info/address/1TRifA7eNLHZEcCTj43eYVWHBbLqTuXkS" , "https://buy.stripe.com/6oE7t716E53c3AIdQQ"]
+custom: ["https://liberapay.com/zoff/donate" , "https://blockstream.info/address/1TRifA7eNLHZEcCTj43eYVWHBbLqTuXkS" , "https://buy.stripe.com/6oE7t716E53c3AIdQQ"]
