--- a/.github/workflows/change_log.yml
+++ b/.github/workflows/change_log.yml
@@ -14,7 +14,7 @@ defaults:
     shell: bash
 
 jobs:
-  macos-compile:
+  gen-changelog:
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v2
