--- a/.github/workflows/change_log.yml
+++ b/.github/workflows/change_log.yml
@@ -36,7 +36,9 @@ jobs:
       env:
             CHANGELOG_GEN_TOKEN: ${{ secrets.CHANGELOG_GEN_TOKEN }}
       run:  |
-            sudo $(which ruby) $(which github_changelog_generator) -u Zoxcore -p Antidote --exclude-tags "echo $(git tag -l '1.[0123].*'| tr '\n' ',')","$(git tag -l '0.*'| tr '\n' ',')" --token "$CHANGELOG_GEN_TOKEN"
+            sudo $(which ruby) $(which github_changelog_generator) -u Zoxcore -p Antidote \
+               --exclude-tags "$(git tag -l '1.[0123].*'| tr '\n' ',')","$(git tag -l '0.*'| tr '\n' ',')" \
+               --token "$CHANGELOG_GEN_TOKEN"
 
     - name: chmod
       run:  |
