--- a/.github/workflows/change_log.yml
+++ b/.github/workflows/change_log.yml
@@ -39,8 +39,12 @@ jobs:
       run:  |
             pwd
             ls -al
+            tags1=$(git tag -l '1.[0123].*'| tr '\n' ',')
+            tags2=$(git tag -l '0.*'| tr '\n' ',')
+            echo $tags1
+            echo $tags2
             sudo $(which ruby) $(which github_changelog_generator) -u Zoxcore -p Antidote \
-               --exclude-tags "echo $(git tag -l '1.[0123].*'| tr '\n' ',')","$(git tag -l '0.*'| tr '\n' ',')" \
+               --exclude-tags $tags1,$tags2 \
                --token "$CHANGELOG_GEN_TOKEN"
 
     - name: chmod
