--- a/.github/workflows/change_log.yml
+++ b/.github/workflows/change_log.yml
@@ -16,7 +16,7 @@ defaults:
 jobs:
   gen-changelog:
     runs-on: ubuntu-latest
-    environment: genlog_gen_token
+    #environment: genlog_gen_token
     steps:
     - uses: actions/checkout@v2
 
