--- a/local_pod_repo/toxcore/Podfile
+++ b/local_pod_repo/toxcore/Podfile
@@ -4,5 +4,5 @@ source 'https://github.com/CocoaPods/Specs.git'
 inhibit_all_warnings!
 
 def common_pods
-    pod "msgpack-c", :git => 'https://github.com/Zoxcore/msgpack-c.git', :commit => '04072baf9eaf05ed56c6423084564d3257d91fcc'
+    pod "msgpack-c", :path => '../msgpack-c'
 end
