fix location access text.

--- a/Antidote/Antidote-Info.plist
+++ b/Antidote/Antidote-Info.plist
@@ -1,9 +1,10 @@
+
 <?xml version="1.0" encoding="UTF-8"?>
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <dict>
 	<key>NSLocationWhenInUseUsageDescription</key>
-	<string>App Uses Location Services to allow background operations while performing long running tasks, this offers a better user experience. The Location Services will be turned off after running for 3 Minutes each run.</string>
+	<string>Used to share your location with your contacts</string>
 	<key>CFBundleDevelopmentRegion</key>
 	<string>en</string>
 	<key>CFBundleDisplayName</key>
