--- a/Antidote/default-theme.yaml
+++ b/Antidote/default-theme.yaml
@@ -8,7 +8,7 @@ colors:
   gray: CCCCCC
   lightgraypink: EFEFF4
   darkgray: AAAAAA
-  color_offline_status: D43F3F
+  color_offline_status: "A3A3A3"
   darkgray2: 8C8C8C
   lightgrayblue: EDF3F5
   simpleblue: 2E76D3
