--- a/.github/stale.yml
+++ b/.github/stale.yml
@@ -15,3 +15,6 @@ markComment: >
   for your contributions.
 # Comment to post when closing a stale issue. Set to `false` to disable
 closeComment: false
+# Limit to only `issues` or `pulls`
+only: issues
+
